processed/jira/txt/LU/LU-18892.txt
Key:        LU-18892
Summary:    page_cache_alloc undefined on Ubuntu 24.04.2, kernel 6.11.0
Link:       https://jira.whamcloud.com/browse/LU-18892
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Duplicate
Assignee:   WC Triage
Reporter:   Robert Read
Created:    Thu, 3 Apr 2025 18:38:43 +0000
Updated:    Thu, 21 Aug 2025 20:02:05 +0000
Resolved:   Thu, 21 Aug 2025 20:02:05 +0000
Links:      Related: is related to  LU-18906; Related: is related to  LU-18448

--- Description ---
Compiling Lustre client on current Ubuntu 24.04.2:

/home/rread/pub-src/lustre-release/lustre/llite/file.c: In function ‘ll_dir_finish_open’:
/home/rread/pub-src/lustre-release/lustre/llite/file.c:678:24: error: implicit declaration of function ‘page_cache_alloc’; did you mean ‘kmem_cache_alloc’? [-Werror=implicit-function-declaration]
  678 |                 page = page_cache_alloc(inode->i_mapping);
      |                        ^~~~~~~~~~~~~~~~
      |                        kmem_cache_alloc
/home/rread/pub-src/lustre-release/lustre/llite/file.c:678:22: error: assignment to ‘struct page *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  678 |                 page = page_cache_alloc(inode->i_mapping);
      |                      ^

--- Comment (adilger, Thu, 21 Aug 2025 20:02:05 +0000) ---
This was fixed via patch https://review.whamcloud.com/58724 ("LU-18906 build: page_cache_alloc removed, missing return").

--- Comment (simmonsja, Thu, 3 Apr 2025 19:10:04 +0000) ---
Are we starting to hit the folio changes?

--- Comment (rread, Thu, 3 Apr 2025 18:40:38 +0000) ---
Code was added by LU-18448:  https://review.whamcloud.com/c/fs/lustre-release/+/57069
